--- a/app_server/views/listItems.jade
+++ b/app_server/views/listItems.jade
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html ng-app="listItems>
+<html ng-app="allItems>
 <head>
-<script (src='./public/angular/angular.min.js')></script>
+<script src='/angular/angular.min.js'></script>
 <meta charset="utf-8">
 <title> Assignment 5 List Items Page</title>
-</head>
-<body ng-controller="myController">
-<input ng-model='myInput' />
-<h1>Hello {{myInput}}</h1>
+.col-xs-12.col-sm-8(ng-controller="itemsController")
+    .error {{message}}
+        .row.list-group
+            .col-xs-12.list-group-item(ng-repeat="items in data.Items")
+                h4
+                    a(href="/items/{{ Items.itemId }}") {{ Items.name }}
+                    small {{ Items.description }}
+                    span.badge.pull-right.badge-default {{ Items.startingPrice }}
+                p.bids {{ Items.bids }}
+                
 </body>
