--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -22,3 +22,4 @@ html(ng-app='app')
     script(src='/angular/main.js')
     script(src='/javascripts/jquery-1.11.1.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js')
